--- a/UserCore/Properties/launchSettings.json
+++ b/UserCore/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7239;http://localhost:9091",
+      "applicationUrl": "https://localhost:9091",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
