--- a/UserCore/appsettings.json
+++ b/UserCore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSql" : "Host=postgres_user;Port=5432;Database=Nutrition;Username=root;Password=admin;Include Error Detail=true"
+    "PostgreSql": "Host=localhost;Port=5433;Database=Nutrition;Username=root;Password=admin;Include Error Detail=true"
   },
   "JwtOptions": {
     "SecretKey": "24enbSecretKey24enbSecretKey24enbSecretKey",
