--- a/NutritionCore/NutritionCore.csproj
+++ b/NutritionCore/NutritionCore.csproj
@@ -10,11 +10,12 @@
     <ItemGroup>
         <PackageReference Include="Confluent.Kafka" Version="2.6.1" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
         <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.11" />
         <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
+        <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
         <PackageReference Include="StackExchange.Redis" Version="2.8.22" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
