--- a/ApiGateway/ApiGateway.csproj
+++ b/ApiGateway/ApiGateway.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="HotChocolate" Version="16.0.0-p.10.15" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11"/>
         <PackageReference Include="Ocelot" Version="23.4.2" />
