--- a/UserCore/UserCore.csproj
+++ b/UserCore/UserCore.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
         <PackageReference Include="Confluent.Kafka" Version="2.6.1" />
+        <PackageReference Include="HotChocolate" Version="16.0.0-p.10.15" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
