--- a/NutritionCore/NutritionCore.csproj
+++ b/NutritionCore/NutritionCore.csproj
@@ -9,6 +9,9 @@
 
     <ItemGroup>
         <PackageReference Include="Confluent.Kafka" Version="2.6.1" />
+        <PackageReference Include="HotChocolate" Version="16.0.0-p.10.16" />
+        <PackageReference Include="HotChocolate.AspNetCore" Version="16.0.0-p.10.15" />
+        <PackageReference Include="HotChocolate.Data.EntityFramework" Version="16.0.0-p.10.16" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
         <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.11" />
